# fractal_explorer

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: controls.rs  fractal_view.rs  gpu.rs  main.rs  wgpu_test.rs
src/shader/: frag.wgsl  vert.wgsl
