[package]
name = "fractal_explorer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1.13.1"
cgmath = "0.18.0"
env_logger = "0.10.0"
googletest = "0.3.0"
iced = "0.8.0"
iced_core = "0.8.1"
iced_graphics = { version = "0.7.0", features = ["canvas"] }
iced_native = "0.9.1"
iced_wgpu = "0.9.0"
iced_winit = "0.8.0"
wgpu = "0.14.2"

[dev-dependencies]
futures-intrusive = "0.5.0"
pollster = "0.3.0"
