[package]
name = "fractal_explorer"
version = "0.1.0"
edition = "2021"

[dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
bytemuck = "1.13.1"
cgmath = "0.18.0"
env_logger = "0.10.0"
iced = "0.9.0"
iced_core = "0.9.0"
iced_graphics = { version = "0.8.0", features = ["canvas"] }
iced_native = "0.10.3"
iced_wgpu = "0.10.0"
iced_winit = "0.9.1"
wgpu = "0.15.1"

[dev-dependencies]
futures-intrusive = "0.5.0"
googletest = "0.8.1"
