[package]
name = "fractal_explorer"
version = "0.1.0"
edition = "2021"

[dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
bytemuck = "1.13.1"
cgmath = "0.18.0"
env_logger = "0.11.0"
iced = "0.10.0"
iced_core = "0.10.0"
iced_graphics = "0.9.0"
iced_runtime = "0.1.1"
iced_wgpu = "0.11.1"
iced_winit = "0.10.0"
iced_widget = { version = "0.1.3", features = ["canvas"] }
wgpu = "0.16.0"
futures = "0.3.28"

[dev-dependencies]
futures-intrusive = "0.5.0"
googletest = "0.11.0"
palette = "0.7.2"
